--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,13 @@
     </dependency>
 
 
+    <dependency>
+      <groupId>com.ubirch.util</groupId>
+      <artifactId>date_2.11</artifactId>
+      <version>0.5.3</version>
+    </dependency>
+
+
+
   </dependencies>
 </project>
